# NdkMd5

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jelly/thor/ndkmd5/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  md5.h  native-lib.cpp
app/src/main/java/com/jelly/thor/ndkmd5/: App.java  MainActivity.java  SignUtils.java
app/src/test/java/com/jelly/thor/ndkmd5/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
